basis to simplify bin evaluation.

Created rfluxmtx program to compute flux transfer matrices from a sender
surface to one or more receiver surfaces.  (Renamed the file klems_int.cal
to klems_full.cal in the process.)

Added "-c" option to getinfo to execute command on data segment.

=====================
Version 4.3

Changed rmtxop so it writes out same type as lesser of inputs unless
direction otherwise using -f? option.

Changed order of oconv arguments in rfluxmtx so user can specify input
octree using -i option at the end instead of (or in addition to) a
list of scene files.

Added support for argument expansion to rfluxmtx and bug fixes.

Fixed bug in indirect hemisphere sampling for some corner cases.

Added default specular lobe to BSDF interpolation.

Set minimum number of shadow checks before direct optimization (4).

(Above changes included in 4.2.1 patch release.)

****** COMPATIBILITY CHANGE ********
Made header input and output the default behavior for dctimestep and
genskyvec.

****** COMPATIBILITY CHANGE ********
Changed pabopto2bsdf default behavior to add 90-degree rotation
to bring pgII's definition of "up" in line with Klems axis
conventions.  Introduced a new header variable "upphi" to
control this added rotation.  Using "#upphi 90" in each
BSDF input file gets back the original behavior, where it
assumes that the up direction is 90-degrees from the X-axis.
The default value of 0 corresponds to PAB's definition of
the X-axis as being "up".

Fixed bug in rsensor related to having many rows (altitude) and
few columns (azimuth) in sensitivity file.

Fixed floating point round-off error in new Hessian calculation
for some sytems (Windows, primarily).

Fixed bug in tensor tree BSDF code that caused bus error on
some systems, and may have been source of other errors as well.

(Above changes included in 4.2.2 patch release.)

Improved ambient extrapolation to avoid zero values.  Actual
threshold set to 5% of recorded value.